--- a/index.html
+++ b/index.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Primera pre-entrega JS</title>
 </head>
+
 <body>
 
 
-
+    <script src="./js/funciones.js"></script>
     <script src="./js/main.js"></script>
 </body>
+
 </html>
