--- a/index.html
+++ b/index.html
@@ -4,12 +4,150 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Primera pre-entrega JS</title>
+    <title>Inmobiliaria Campana</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rubik&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
+    <!-- main -->
+    <main>
+        <!-- contenido del header -->
+        <header class="header">
+            <nav class="navbar navbar-expand-lg">
+                <div class="container-fluid">
+                    <a class="navbar-brand" href="#"><img class="imagen-logo" src="./imagenes/logo_definitivo.png"
+                            alt="logo"></a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">INICIO</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">PROPIEDADES</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">TASACIONES</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">CONTACTO</a>
+                            </li>
+                        </ul>
+                        <form class="d-flex" role="search">
+                            <input class="form-control me-2" type="search" placeholder="Código aviso"
+                                aria-label="Search">
+                            <button class="btn btn-outline-primary" type="submit">Buscar</button>
+                        </form>
+                    </div>
+                </div>
+            </nav>
+        </header>
 
+        <!-- contenido principal -->
+            <section>
+                <div id="bienvenida">
 
+                </div>
+                <!-- búsqueda de propiedades -->
+                <div class="row my-3">
+                    <div class="col-md-4 offset-md-4 ">
+                        <form id="formulario">
+                            <div class="form-group">
+                                <select class="form-control" id="operacion">
+                                    <option value="operacion">Operación</option>
+                                    <option value="alquiler">Alquiler</option>
+                                    <option value="venta">Venta</option>
+                                </select>
+                                <div id="mensajeErrorOperacion" class="error"></div>
+
+                                <select class="form-control" id="tipoPropiedad">
+                                    <option value="tipoPropiedad">Tipo propiedad</option>
+                                    <option value="casa">Casa</option>
+                                    <option value="departamento">Departamento</option>
+                                </select>
+                                <div id="mensajeErrorTipoPropiedad" class="error"></div>
+
+                                <select class="form-control" id="ubicacion">
+                                    <option value="ubicacion">Ubicación</option>
+                                    <option value="campana">○ Campana</option>
+                                    <option value="altoCardales">- Alto Los Cardales</option>
+                                    <option value="elBosque">- El Bosque</option>
+                                    <option value="elCardal">- El Cardal II</option>
+                                    <option value="cardalesVillage">- Cardales Village</option>
+                                    <option value="centro">- Centro</option>
+                                    <option value="losPioneros">- Los pioneros</option>
+                                    <option value="sanJorge">- San Jorge</option>
+                                    <option value="escobar">○ Escobar</option>
+                                    <option value="belenDeEscobar">- Belén de Escobar</option>
+                                    <option value="lomaVerde">- Loma Verde</option>
+                                    <option value="harasSantaMaria">- Haras Santa María</option>
+                                </select>
+                                <div id="mensajeErrorUbicacion" class="error"></div>
+
+                                <select class="form-control" id="valor">
+                                    <option value="valor">Valor</option>
+                                    <option value="pesos">Pesos</option>
+                                    <option value="dolares">Dólares</option>
+                                </select>
+                                <div id="mensajeErrorValor" class="error"></div>
+                                <button id="botonForm" type="button">Boton</button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </section>
+        </div>
+        <!-- Cards de propiedades -->
+            <section>
+                <h3>Propiedades destacadas</h3>
+            <div class="propiedades">
+
+            </div>          
+            </section>
+        <!-- footer -->
+        <div class="footer-wrapper">
+            <footer class="footer">
+                <section class="footer-seccion">
+                    <img src="./imagenes/logo_definitivo.png" alt="logo inmobiliaria" width="180px" height="90px">
+                    <p>Tasaciones</p>
+                    <p>Propiedades en venta</p>
+                    <p>Propiedades en alquiler</p>
+                    <p>inmobiliariacampana@gmail.com</p>
+                    <p>+543489689753</p>
+                </section>
+                <section class="footer-seccion">
+                    <h4 class="footer-seccion_titulo">CASA CENTRAL</h4>
+                    <p><i class="bi bi-geo-alt-fill"></i> Av.Rocca N° 1500, Campana, Pcia de Buenos Aires</p>
+                    <p><i class="bi bi-clock"></i> Lunes a Viernes 8hs a 18hs <br><i class="bi bi-clock"></i> Sábados:
+                        8hs a 13hs</p>
+                    <p><i class="bi bi-envelope-fill"></i> inmobiliariacampana@gmail.com</p>
+                </section>
+                <section class="footer-seccion">
+                    <h4 class="footer-seccion_titulo">SUCURSAL ESCOBAR</h4>
+                    <p><i class="bi bi-geo-alt-fill"></i> Hipolito Yrigoyen N° 65, Escobar, Pcia de Buenos Aires</p>
+                    <p><i class="bi bi-clock"></i> Lunes a Viernes 8hs a 18hs <br><i class="bi bi-clock"></i> Sábados:
+                        8hs a 13hs</p>
+                    <p><i class="bi bi-envelope-fill"></i> inmobiliariacampana@gmail.com</p>
+                </section>
+                <section class="footer-seccion_dr">
+                    <small>&copy;2023 <b>Inmobiliaria Campana</b> - Todos los Derechos Reservados</small>
+                </section>
+            </footer>
+        </div>
+    </main>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+        crossorigin="anonymous"></script>
     <script src="./js/funciones.js"></script>
     <script src="./js/main.js"></script>
 </body>
