--- a/index.html
+++ b/index.html
@@ -23,13 +23,8 @@
                 <div class="container-fluid">
                     <a class="navbar-brand" href="#"><img class="imagen-logo" src="./imagenes/logo_definitivo.png"
                             alt="logo"></a>
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <div class="collapse navbar-collapse " id="navbarSupportedContent">
+                        <ul class="navbar-nav  mb-2 mb-lg-0">
                             <li class="nav-item">
                                 <a class="nav-link" href="#">INICIO</a>
                             </li>
@@ -43,79 +38,95 @@
                                 <a class="nav-link" href="#">CONTACTO</a>
                             </li>
                         </ul>
-                        <form class="d-flex" role="search">
-                            <input class="form-control me-2" type="search" placeholder="Código aviso"
-                                aria-label="Search">
-                            <button class="btn btn-outline-primary" type="submit">Buscar</button>
-                        </form>
                     </div>
                 </div>
             </nav>
         </header>
 
         <!-- contenido principal -->
-        <section>
-            <div id="bienvenida">
-
+        <!-- carousel -->
+        <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="./imagenes/background_image.jpg" class="d-block w-100 img_carousel" alt="imagen carousel">
+                </div>
             </div>
-            <!-- búsqueda de propiedades -->
-            <div class="row my-3">
-                <div class="col-md-4 offset-md-4 ">
+            <section class="form">
+                <!-- búsqueda de propiedades -->
+                <div class="container busq_prop">
                     <form id="formulario">
-                        <div class="form-group">
-                            <select class="form-control" id="operacion">
-                                <option value="operacion">Operación</option>
-                                <option value="alquiler">Alquiler</option>
-                                <option value="venta">Venta</option>
-                            </select>
-                            <div id="mensajeErrorOperacion" class="error"></div>
-
-                            <select class="form-control" id="tipoPropiedad">
-                                <option value="tipoPropiedad">Tipo propiedad</option>
-                                <option value="casa">Casa</option>
-                                <option value="departamento">Departamento</option>
-                            </select>
-                            <div id="mensajeErrorTipoPropiedad" class="error"></div>
-
-                            <select class="form-control" id="ubicacion">
-                                <option value="ubicacion">Ubicación</option>
-                                <option value="campana">○ Campana</option>
-                                <option value="altoCardales">- Alto Los Cardales</option>
-                                <option value="elBosque">- El Bosque</option>
-                                <option value="elCardal">- El Cardal II</option>
-                                <option value="cardalesVillage">- Cardales Village</option>
-                                <option value="centro">- Centro</option>
-                                <option value="losPioneros">- Los pioneros</option>
-                                <option value="sanJorge">- San Jorge</option>
-                                <option value="escobar">○ Escobar</option>
-                                <option value="belenDeEscobar">- Belén de Escobar</option>
-                                <option value="lomaVerde">- Loma Verde</option>
-                                <option value="harasSantaMaria">- Haras Santa María</option>
-                            </select>
-                            <div id="mensajeErrorUbicacion" class="error"></div>
-
-                            <select class="form-control" id="valor">
-                                <option value="valor">Valor</option>
-                                <option value="pesos">Pesos</option>
-                                <option value="dolares">Dólares</option>
-                            </select>
-                            <div id="mensajeErrorValor" class="error"></div>
-                            <button id="botonForm" type="button">Boton</button>
+                        <div class="row">
+                            <div class="col-sm-6 col-md-2">
+                                <p><b>ENCUENTRE SU PROPIEDAD</b></p>
+                            </div>
+                            <div class="col-sm-6 col-md-2">
+                                <div class="form-group">
+                                    <select class="form-control" id="operacion">
+                                        <option value="operacion">Operación</option>
+                                        <option value="alquiler">Alquiler</option>
+                                        <option value="venta">Venta</option>
+                                    </select>
+                                    <div id="mensajeErrorOperacion" class="error"></div>
+                                </div>
+                            </div>
+                            <div class="col-sm-6 col-md-2">
+                                <div class="form-group">
+                                    <select class="form-control" id="tipoPropiedad">
+                                        <option value="tipoPropiedad">Tipo propiedad</option>
+                                        <option value="casa">Casa</option>
+                                        <option value="departamento">Departamento</option>
+                                    </select>
+                                    <div id="mensajeErrorTipoPropiedad" class="error"></div>
+                                </div>
+                            </div>
+                            <div class="col-sm-6 col-md-2">
+                                <div class="form-group">
+                                    <select class="form-control" id="ubicacion">
+                                        <option value="ubicacion">Ubicación</option>
+                                        <option value="campana">○ Campana</option>
+                                        <option value="altoCardales">- Alto Los Cardales</option>
+                                        <option value="elBosque">- El Bosque</option>
+                                        <option value="elCardal">- El Cardal II</option>
+                                        <option value="cardalesVillage">- Cardales Village</option>
+                                        <option value="centro">- Centro</option>
+                                        <option value="losPioneros">- Los pioneros</option>
+                                        <option value="sanJorge">- San Jorge</option>
+                                        <option value="escobar">○ Escobar</option>
+                                        <option value="belenDeEscobar">- Belén de Escobar</option>
+                                        <option value="lomaVerde">- Loma Verde</option>
+                                        <option value="harasSantaMaria">- Haras Santa María</option>
+                                    </select>
+                                    <div id="mensajeErrorUbicacion" class="error"></div>
+                                </div>
+                            </div>
+                            <div class="col-sm-6 col-md-2">
+                                <div class="form-group">
+                                    <select class="form-control" id="valor">
+                                        <option value="valor">Valor</option>
+                                        <option value="pesos">Pesos</option>
+                                        <option value="dolares">Dólares</option>
+                                    </select>
+                                    <div id="mensajeErrorValor" class="error"></div>
+                                </div>
+                            </div>
+                            <div class="col-sm-6 col-md-2">
+                                <div class="form-group">
+                                    <button id="botonForm" type="button" class="btn"> <img class="search"
+                                            src="./imagenes/search.svg" alt="icono">Buscar</button>
+                                </div>
+                            </div>
                         </div>
                     </form>
                 </div>
-            </div>
-        </section>
+            </section>
         </div>
         <!-- Cards de propiedades -->
         <section>
-            <h3 class="mx-3">Propiedades destacadas</h3>
+            <h3 class="mx-3 titulo_propiedad">Propiedades destacadas</h3>
             <div class="container my-3">
                 <div id="propiedades" class="row"> </div>
             </div>
         </section>
-        <!-- página ver más información -->
-        <section></section>
         <!-- footer -->
         <div class="footer-wrapper">
             <footer class="footer">
@@ -134,6 +145,7 @@
                         8hs a 13hs</p>
                     <p><i class="bi bi-envelope-fill"></i> inmobiliariacampana@gmail.com</p>
                 </section>
+
                 <section class="footer-seccion">
                     <h4 class="footer-seccion_titulo">SUCURSAL ESCOBAR</h4>
                     <p><i class="bi bi-geo-alt-fill"></i> Hipolito Yrigoyen N° 65, Escobar, Pcia de Buenos Aires</p>
@@ -141,17 +153,16 @@
                         8hs a 13hs</p>
                     <p><i class="bi bi-envelope-fill"></i> inmobiliariacampana@gmail.com</p>
                 </section>
-                <section class="footer-seccion_dr">
-                    <small>&copy;2023 <b>Inmobiliaria Campana</b> - Todos los Derechos Reservados</small>
-                </section>
             </footer>
         </div>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
         crossorigin="anonymous"></script>
-    <script src="./js/funciones.js"></script>
-    <script src="./js/main.js"></script>
+    
+        <script src="./js/paginaPrincipal.js"></script>
+        <script src="./js/verPropiedad.js"></script>
+
 </body>
 
 </html>
