--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <div class="collapse navbar-collapse " id="navbarSupportedContent">
                         <ul class="navbar-nav  mb-2 mb-lg-0">
                             <li class="nav-item">
-                                <a class="nav-link" href="#">INICIO</a>
+                                <a class="nav-link" href="index.html">INICIO</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="#">PROPIEDADES</a>
@@ -122,7 +122,14 @@
         </div>
         <!-- Cards de propiedades -->
         <section>
-            <h3 class="mx-3 titulo_propiedad">Propiedades destacadas</h3>
+            <div class="row">
+                <div class="col-md-8">
+                    <h3 class="mx-3 titulo_propiedad">Propiedades destacadas</h3>
+                </div>
+                <div class="col-md-4 corazon">
+                    <a href="favoritos.html" id="favs"></a>
+                </div>
+            </div>
             <div class="container my-3">
                 <div id="propiedades" class="row"> </div>
             </div>
@@ -159,10 +166,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
         crossorigin="anonymous"></script>
-    
+        <script src="./js/funciones.js"></script>
         <script src="./js/paginaPrincipal.js"></script>
-        <script src="./js/verPropiedad.js"></script>
-
 </body>
 
 </html>
