--- a/html/favoritos.html
+++ b/html/favoritos.html
@@ -11,7 +11,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 
 <body>
@@ -21,18 +21,15 @@
         <header class="header">
             <nav class="navbar navbar-expand-lg">
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="#"><img class="imagen-logo" src="./imagenes/logo_definitivo.png"
+                    <a class="navbar-brand" href="#"><img class="imagen-logo" src="../imagenes/logo_definitivo.png"
                             alt="logo"></a>
                     <div class="collapse navbar-collapse " id="navbarSupportedContent">
                         <ul class="navbar-nav  mb-2 mb-lg-0">
                             <li class="nav-item">
-                                <a class="nav-link" href="./index.html">INICIO</a>
+                                <a class="nav-link" href="../index.html">INICIO</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">PROPIEDADES</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">TASACIONES</a>
+                                <a class="nav-link" href="#propiedades">PROPIEDADES</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="#">CONTACTO</a>
@@ -40,17 +37,27 @@
                         </ul>
                     </div>
                 </div>
-            </nav> 
+            </nav>
         </header>
-        <!-- contenido de las propiedades con sus descripciones -->
+        <!-- Cards de propiedades -->
         <section>
-            <div id="propiedad"></div>
+            <div class="row">
+                <div class="col-md-8">
+                    <h3 class="mx-3 titulo_propiedad">Propiedades favoritas</h3>
+                </div>
+                <div class="col-md-4 corazon">
+                    <a href="./favoritos.html" id="favs"></a>
+                </div>
+            </div>
+            <div class="container my-3">
+                <div id="propiedades" class="row"> </div>
+            </div>
         </section>
         <!-- footer -->
         <div class="footer-wrapper">
             <footer class="footer">
                 <section class="footer-seccion">
-                    <img src="./imagenes/logo_definitivo.png" alt="logo inmobiliaria" width="180px" height="90px">
+                    <img src="../imagenes/logo_definitivo.png" alt="logo inmobiliaria" width="180px" height="90px">
                     <p>Tasaciones</p>
                     <p>Propiedades en venta</p>
                     <p>Propiedades en alquiler</p>
@@ -78,9 +85,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
         crossorigin="anonymous"></script>
-    <script src="./js/funciones.js"></script>
-    <script src="./js/verPropiedad.js"></script>
-    </body>
-
+    <script src="../js/funciones.js"></script>
+    <script src="../js/favoritos.js"></script>
+</body>
 
 </html>
