filtrado de propiedades

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                             </div>
                             <div class="col-sm-6 col-md-2">
                                 <div class="form-group">
-                                    <select class="form-control" id="operacion">
+                                    <select class="form-control" id="estado">
                                         <option value="Operación">Operación</option>
                                         <option value="Alquiler">Alquiler</option>
                                         <option value="Venta">Venta</option>
@@ -67,7 +67,7 @@
                             </div>
                             <div class="col-sm-6 col-md-2">
                                 <div class="form-group">
-                                    <select class="form-control" id="tipoPropiedad">
+                                    <select class="form-control" id="propiedad">
                                         <option value="Tipo propiedad">Tipo propiedad</option>
                                         <option value="Casa">Casa</option>
                                         <option value="Departamento">Departamento</option>
@@ -78,18 +78,18 @@
                                 <div class="form-group">
                                     <select class="form-control" id="ubicacion">
                                         <option value="Ubicación">Ubicación</option>
-                                        <option value="Campana">○ Campana</option>
-                                        <option value=" Alto Los Cardales">- Alto Los Cardales</option>
-                                        <option value=" El Bosque">- El Bosque</option>
-                                        <option value="El Cardal II">- El Cardal II</option>
-                                        <option value="Cardales Village">- Cardales Village</option>
-                                        <option value="Centro">- Centro</option>
-                                        <option value="Los pioneros">- Los pioneros</option>
-                                        <option value="San Jorge">- San Jorge</option>
-                                        <option value="Escobar">○ Escobar</option>
-                                        <option value="Belén de Escobar">- Belén de Escobar</option>
-                                        <option value="Loma Verde">- Loma Verde</option>
-                                        <option value="Haras Santa María">- Haras Santa María</option>
+                                        <option id ="localidad" value="Campana">○ Campana</option>
+                                        <option id ="localidad" value=" Alto Los Cardales">- Alto Los Cardales</option>
+                                        <option id ="localidad" value=" El Bosque">- El Bosque</option>
+                                        <option id ="localidad" value="El Cardal II">- El Cardal II</option>
+                                        <option id ="localidad" value="Cardales Village">- Cardales Village</option>
+                                        <option id ="localidad" value="Centro">- Centro</option>
+                                        <option id ="localidad" value="Los pioneros">- Los pioneros</option>
+                                        <option id ="localidad" value="San Jorge">- San Jorge</option>
+                                        <option id ="localidad" value="Escobar">○ Escobar</option>
+                                        <option id ="localidad" value="Belén de Escobar">- Belén de Escobar</option>
+                                        <option id ="localidad" value="Loma Verde">- Loma Verde</option>
+                                        <option id ="localidad" value="Haras Santa María">- Haras Santa María</option>
                                     </select>
                                 </div>
                             </div>
