--- a/verpropiedad.html
+++ b/verpropiedad.html
@@ -27,7 +27,7 @@
                     <div class="collapse navbar-collapse " id="navbarSupportedContent">
                         <ul class="navbar-nav  mb-2 mb-lg-0">
                             <li class="nav-item">
-                                <a class="nav-link" href="../index.html">INICIO</a>
+                                <a class="nav-link" href="./index.html">INICIO</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="#propiedades">PROPIEDADES</a>
