--- a/verpropiedad.html
+++ b/verpropiedad.html
@@ -30,7 +30,7 @@
                                 <a class="nav-link" href="./index.html">INICIO</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#propiedades">PROPIEDADES</a>
+                                <a class="nav-link" href="./index.html#propiedades">PROPIEDADES</a>
                             </li>
                         </ul>
                     </div>
@@ -39,6 +39,11 @@
         </header>
         <!-- contenido de las propiedades con sus descripciones -->
         <section>
+            <div class="row">
+                <div class="col text-end">
+                  <a href="../favoritos.html" id="favs"></a>
+                </div>
+            </div>
             <div id="propiedad"></div>
         </section>
         <!-- footer -->
