modificación en la imagen de favoritos

--- a/verpropiedad.html
+++ b/verpropiedad.html
@@ -37,8 +37,8 @@
         </header>
         <section>
             <div class="row">
-                <div class="col text-end">
-                  <a href="../favoritos.html" id="favs"></a>
+                <div class="col text-end corazon">
+                  <a href="./favoritos.html" id="favs"></a>
                 </div>
             </div>
             <div id="propiedad"></div>
