--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                         <h3 class="mx-3 titulo_propiedad">Propiedades destacadas</h3>
                     </div>
                     <div class="col-md-4 corazon">
-                        <a href="favoritos.html" id="favs"></a>
+                        <a href="./favoritos.html" id="favs"></a>
                     </div>
                 </div>
             </div>
@@ -122,7 +122,7 @@
                 <div id="propiedades" class="row"> </div>
             </div>
         </section>
-        
+
         <div class="footer-wrapper">
             <footer class="footer">
                 <section class="footer-seccion">
