--- a/verpropiedad.html
+++ b/verpropiedad.html
@@ -20,7 +20,7 @@
         <header class="header">
             <nav class="navbar navbar-expand-lg">
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="#"><img class="imagen-logo" src="../imagenes/logo_definitivo.png"
+                    <a class="navbar-brand" href="#"><img class="imagen-logo" src="./imagenes/logo_definitivo.png"
                             alt="logo"></a>
                     <div class="collapse navbar-collapse " id="navbarSupportedContent">
                         <ul class="navbar-nav  mb-2 mb-lg-0">
