modificaciones de ruta en ver-propiedad.html

--- a/verpropiedad.html
+++ b/verpropiedad.html
@@ -46,7 +46,7 @@
         <div class="footer-wrapper">
             <footer class="footer">
                 <section class="footer-seccion">
-                    <img src="../imagenes/logo_definitivo.png" alt="logo inmobiliaria" width="180px" height="90px">
+                    <img src="./imagenes/logo_definitivo.png" alt="logo inmobiliaria" width="180px" height="90px">
                     <p>Tasaciones</p>
                     <p>Propiedades en venta</p>
                     <p>Propiedades en alquiler</p>
