--- a/favoritos.html
+++ b/favoritos.html
@@ -19,7 +19,7 @@
         <header class="header">
             <nav class="navbar navbar-expand-lg">
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="#"><img class="imagen-logo" src="../imagenes/logo_definitivo.png"
+                    <a class="navbar-brand" href="#"><img class="imagen-logo" src="./imagenes/logo_definitivo.png"
                             alt="logo"></a>
                     <div class="collapse navbar-collapse " id="navbarSupportedContent">
                         <ul class="navbar-nav  mb-2 mb-lg-0">
@@ -51,7 +51,7 @@
         <div class="footer-wrapper">
             <footer class="footer">
                 <section class="footer-seccion">
-                    <img src="../imagenes/logo_definitivo.png" alt="logo inmobiliaria" width="180px" height="90px">
+                    <img src="./imagenes/logo_definitivo.png" alt="logo inmobiliaria" width="180px" height="90px">
                     <p>Tasaciones</p>
                     <p>Propiedades en venta</p>
                     <p>Propiedades en alquiler</p>
