--- a/favoritos.html
+++ b/favoritos.html
@@ -27,7 +27,7 @@
                                 <a class="nav-link" href="./index.html">INICIO</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#propiedades">PROPIEDADES</a>
+                                <a class="nav-link" href="./index.html#propiedades">PROPIEDADES</a>
                             </li>
                         </ul>
                     </div>
